Changed hover effects

--- a/code/style.css
+++ b/code/style.css
@@ -135,7 +135,7 @@ footer {
   height: auto;
   color: #f4b3da;
   opacity: 0.7;
-  font-size: 16px;
+  font-size: 14px;
   padding: 10px;
   margin-left: 20px;
 }
@@ -210,7 +210,7 @@ footer {
     color: #a4abc6;
   }
   .big-news-author,
-  .big-news-text {
+  .big-news-article {
     display: none;
   }
   .other-news {
