--- a/code/style.css
+++ b/code/style.css
@@ -1,56 +1,34 @@
-html {
-  background: white;
-  color: black;
+html, body, h1, h2, p {
+  margin:0;
+  padding:0;
+}
+
+.header-container {
+  background: #F0ECE3;
+  display: flex;
+  align-items:center;
+  padding: 8px;
 }
 
 .site-name {
   color: #D96098;
   font-family: 'Raleway', sans-serif;
-  font-size: 75px;
-}
-
-.header {
-  background: #F0ECE3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .round-logo-yoga {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
-  border-radius: 50%;
-  margin: 25px 25px;
+  border-radius: 50%; 
 }
-
-/* Allt top-nav nedan ska bara synas i desktop och padda
-.top-nav {
-  margin: 10px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.top-nav a {
-  font-family: 'Raleway', sans-serif;
-  color: #483434;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.top-nav a:hover {
-  color: #A68DAD;
-  text-decoration: underline;
-}*/
 
 ul {
   list-style-type: none;
   margin: 10px;
   padding: 0;
-  display: flex;
-  justify-content: center;
+  display: none;
 }
 
 li {
@@ -65,60 +43,75 @@ li a {
 }
 
 li a:hover {
-  color: #A68DAD;
+  color:white;
   text-decoration: underline;
-}
-
-.bi-bi-instagram {
-  color:plum;
-}
-
-.bi-bi-facebook {
-  color:slateblue;
-}
-
-.bi-bi-twitter {
-  color:rosybrown;
+  background-color:mediumpurple;
 }
 
 .big-news {
-  background: palevioletred;
-  border: 2px solid;
-  height: 300px;
-  display: flex;
-  justify-content:space-around;
-  margin: 10px;
-  padding: 25px;
+  background-image:linear-gradient(to bottom, #D77FA1, #DFD3C3, #C7B198);
   font-family: 'Raleway', sans-serif;
 }
 
-.big-news img {
-  width: 100%;
-  height: 100%;
+.big-news-image {
+  /* flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 1; */
+  flex: 1;
 }
 
 h2 {
+  margin-bottom: 16px;
+}
+
+.big-news img {
+  max-width: 100%;
+  height:auto;
+}
+
+.big-news-text {
   color: #886F6F;
-  font-size: 50px;
+  font-size: 20px;
+  padding: 8px;
+  /* flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 1; */
+  flex: 1;
 }
 
-p {
-  color: #886F6F;
-  font-size: 16px;
+@media (min-width: 667px) {
+  .big-news {
+   display:flex;
+   padding: 8px;
+  }
 }
 
-.flex-container {
-  display: flex;
-  background-color:thistle;
-  flex-wrap: wrap;
-  margin: 10px;
-}
-
-.flex-container > div {
-  width: 500px;
-  height: 500px;
-  background-color: papayawhip;
-  margin: 15px;
+.small-news {
+  background-color: #C7B198;
+  border: 5px solid;
+  height: 750px;
   padding: 25px;
-  font-size: 75px;
+  margin: 10px;
+  font-family: 'Raleway', sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; 
 }
+
+.small-news> div {
+  background-color:thistle;
+  font-family: 'Raleway', sans-serif;
+  width: 300px;
+  height: 300px;
+  border-radius: 5%;
+  font-size: 12px;
+  margin: 15px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items:flex-end; 
+}
+
+
+
