--- a/code/style.css
+++ b/code/style.css
@@ -1,71 +1,126 @@
 * {
-  box-sizing:border-box
-}
-
-body {
+  box-sizing:border-box;
   margin: 0;
   padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 70px;
+  color: black;
+  text-transform: uppercase;
 }
 
 nav {
   width: 100%;
-  height: 75px;
-  background-color: lightgray;
-  line-height: 75px;
-  padding: 0px 40px;
+  height: 125px;
+  background-color: lightgrey;
+  padding: 0px 20px;
+  line-height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.navbar {
-  display: flex;
+label #btn,
+label #cancel{
+  color: black;
+  font-size: 30px;
+  line-height: 80px;
+  cursor: pointer;
+  display: none;
   justify-content: flex-end;
-  align-items: center;
-  color: black
+}
+
+#check {
+  display: none;
 }
 
 .navbar-links ul {
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: flex-end;
 }
 
-.navbar-links li {
-  list-style: none;
+.navbar-links ul li {
+  display: inline-block;
+  line-height: 60px;
+  margin: 0 15px;
 }
 
-.navbar-links li a {
-  text-decoration:none;
+.navbar-links ul li a {
+  position: relative;
   color: black;
-  padding: 1rem;
-  display: block;
+  font-size:18px;
+  text-transform: uppercase;
 }
 
-.navbar-links li:hover {
-  background-color: #555;
+.navbar-links li:hover{
+  background-color: #999;
 }
 
-.toggle-button {
-  position:absolute;
-  right: 1rem;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
-}
-
-
-.toggle-button .bar {
-  height: 3px;
+.headnews-img {
   width: 100%;
-  background-color: black;
-  border-radius: 10px;
+  height: auto;
+  }
+
+.headnews {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+
+.other-news {
+  width: 100%;
+  height: auto;
+  }
+
+.news3 {
+  width: 100%;
+  height: auto;
 }
 
-@media (max-width: 667px) {
-  .toggle-button {
-    display: flex;
-  }
+  @media (max-width: 667px) {
+      .nav {
+      display: flex;
+    }
+    
+      .navbar-links {
+        display: none;
+      }
+      
+      h1 {
+        font-size: 40px;
+      }
 
-  .navbar-links {
-    display: none;
-  }
+
+     
+    
+    
+   @media (max-width: 667px) {
+      label #btn{
+        display: block;
+      }
+      ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: red;
+        top: 80px;
+        left: 0;
+        text-align: center;
+        transition: all .5s;
+      }
+      nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+      }
+      nav ul li a{
+        font-size: 20px;
+      }
+    
+      #check:checked ~ ul{
+        left: 0;
+      }
