Centered the cards

--- a/code/style.css
+++ b/code/style.css
@@ -100,6 +100,8 @@ a:visited, a:link {
 .cards {
   margin: 40px 15px;
   backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
 }
 
 .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8 {
