--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,8 @@
 html {
   color: #000000;
   margin: 10px;
+  font-size: 17px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 header img{
@@ -8,26 +10,33 @@ header img{
   height: 50px;
  }
 
- header{
+header{
   display: flex;
-  margin-left: 10px;
+  margin: 20px 5px 25px 10px;
   font-size: 25px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #1267b6;
 }
- .item2 {
+.item2 {
   margin-left: 20px;
   margin-top: 10px;
 }
 
- header a{
+header a{
   display: none;  
  }
 
 a {
   text-decoration: none;  
 }
+.polaroid {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
+.polaroid p{
+  text-align: center;
+  padding: 10px;
+}
 /*section*/
 section{
   text-align: center;
@@ -43,12 +52,29 @@ section{
   height: 100%;
 }
 
+.big-news img:hover{
+  transform: scaleX(-1);
+}
 .mainText img{
   width: 100%;
   height: 100%;
 }
+
+.mainText img:hover{
+  transform: scaleX(-1);
+}
+section h1{
+  margin-top: 25px;
+  font-size: 25px;
+  font-weight: 400;
+}
+
 section p{
   text-align: justify;
+  line-height: 1.8;
+  color: #7a7a7a;
+  margin-top: 25px;
+  font-size: 16px;
 }
 
 /*for tab*/
@@ -70,7 +96,13 @@ section p{
   }
 
    header a{
-    display: flex;  
+    display: flex; 
+    color: #1267b6; 
+   }
+   
+   header a:hover{ 
+    color: #EF4022; 
+    text-decoration: overline;
    }
 
 /*section*/
@@ -81,11 +113,11 @@ section p{
 
   margin-bottom: 20px;
 }
+
 .big-news-text{
   margin-top: -20px;
   margin-right: 20px;
 }
-
 .mainText{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -93,16 +125,19 @@ section p{
   grid-column-gap: 20px;
   grid-row-gap: 10px;
 }
-
-
 }
 
 /*for desktop*/
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
 
   .item2 { 
-    display:flex;
-    margin-left: -90px;
+    display:grid;
+    margin-left: -40px;
+    font-size:35px;
+    margin-top: 0;
+  }
+  .item3 .item4 .item5 .item6{
+    text-align: end;
   }
   header {
     display: grid;
