--- a/code/style.css
+++ b/code/style.css
@@ -120,6 +120,7 @@ a:visited, a:link {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  text-align: center;
  
 }
 
