--- a/code/style.css
+++ b/code/style.css
@@ -139,7 +139,7 @@ a:visited, a:link {
   align-items: center;
   text-align: center;
   flex-direction: column;
-  width: 80%;
+  width: auto;
 }
 
 .card1:hover img, .card2:hover img, .card3:hover img, .card4:hover img, .card5:hover img, .card6:hover img, .card7:hover img, .card8:hover img {
