--- a/code/style.css
+++ b/code/style.css
@@ -140,7 +140,7 @@ a:visited, a:link {
   text-align: center;
   flex-direction: column;
   width: auto;
-  margin: 0;
+  margin-left: 10%;
 }
 
 .card1:hover img, .card2:hover img, .card3:hover img, .card4:hover img, .card5:hover img, .card6:hover img, .card7:hover img, .card8:hover img {
