--- a/code/style.css
+++ b/code/style.css
@@ -134,7 +134,7 @@ a:visited, a:link {
 
 .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
   display: flex;
-  position: absolute;
+  position: fixed;
   
   flex-direction: column;
   
