--- a/code/style.css
+++ b/code/style.css
@@ -52,7 +52,7 @@ nav a:hover {
 
 p {
   line-height: 30px;
-  margin: 0px; 
+  margin: 20px; 
 }
 
 a:visited, a:link {
@@ -134,10 +134,13 @@ a:visited, a:link {
 
 .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
   display: flex;
-  position: fixed;
-  
+  position: absolute;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: flex-start;
   flex-direction: column;
-  
+  width: auto;
+  flex-wrap: wrap;
 }
 
 .card1:hover img, .card2:hover img, .card3:hover img, .card4:hover img, .card5:hover img, .card6:hover img, .card7:hover img, .card8:hover img {
