--- a/code/style.css
+++ b/code/style.css
@@ -135,9 +135,9 @@ a:visited, a:link {
 .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
   display: flex;
   position: absolute;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  text-align: flex-start;
+  text-align: center;
   flex-direction: column;
   width: auto;
   flex-wrap: wrap;
