--- a/code/style.css
+++ b/code/style.css
@@ -129,10 +129,11 @@ a:visited, a:link {
 }
 
 .card1 p, .card2 p, .card3 p, .card4 p, .card5 p, .card6 p, .card7 p, .card8 p {
-  display:none; 
+  display: none; 
 }
 
-.card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
+.card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
+.card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
   display: flex;
   position: absolute;
   justify-content: center;
@@ -142,6 +143,8 @@ a:visited, a:link {
   width: auto;
   flex-wrap: wrap;
 }
+
+
 
 .card1:hover img, .card2:hover img, .card3:hover img, .card4:hover img, .card5:hover img, .card6:hover img, .card7:hover img, .card8:hover img {
   opacity: 0.2;
