--- a/code/style.css
+++ b/code/style.css
@@ -137,6 +137,7 @@ a:visited, a:link {
   display: grid;
   position: absolute;
   grid-template-rows: repeat(1fr, 1fr);
+  justify-items: center;
 }
 
 
