--- a/code/style.css
+++ b/code/style.css
@@ -130,6 +130,7 @@ a:visited, a:link {
 
 .card1 p, .card2 p, .card3 p, .card4 p, .card5 p, .card6 p, .card7 p, .card8 p {
   display: none; 
+  text-align: center;
 }
 
 .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
