--- a/code/style.css
+++ b/code/style.css
@@ -229,6 +229,7 @@ li {
   .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
     font-size: 14px;
     line-height: 20px; 
+    margin: 0;
   }
 }
 
