--- a/code/style.css
+++ b/code/style.css
@@ -230,7 +230,7 @@ li {
     font-size: 14px;
     line-height: 20px; 
     flex-wrap: wrap;
-    max-width: 60%;
+    margin-right: 50px;
   }
 }
 
