--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,4 @@
+/* mobile first */
 :root {
   /* fontsize */
   --fontsize-regular: 1rem;
@@ -26,12 +27,12 @@ body {
   background-color: var(--color-black);
   color: var(--color-white);
 }
-
 /* h2, h3 reserved for title */
 h2,
 h3 {
   font-family: "Libre Baskerville", serif;
   font-weight: var(--fontweight-baskerville-bold);
+  cursor: default;
 }
 h2 {
   line-height: 2.25rem;
@@ -40,30 +41,26 @@ a {
   text-decoration: none;
   color: inherit;
 }
+p {
+  cursor: default;
+}
 .header {
   max-width: 62rem;
   margin: 0 auto;
   height: 4rem;
   display: flex;
-  padding: 1em;
-  justify-content: space-between;
-}
-.header-tablet {
-  display: none;
-  max-width: 62rem;
-  margin: 0 auto;
-  height: 4rem;
-  padding: 1em;
-}
-.nav-tablet {
-  width: 100%;
-  display: flex;
+  padding: 2em 1em;
   justify-content: space-between;
   align-items: center;
 }
+.branding-tablet,
 .branding {
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+.branding-tablet {
+  display: none;
 }
 .branding-logo {
   display: inline-block;
@@ -82,6 +79,9 @@ a {
 }
 
 .nav {
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
   display: none;
 }
 .nav-menu {
@@ -91,19 +91,18 @@ a {
 .nav-menu:hover {
   color: var(--color-accent);
 }
-
 .big-news,
 .popular {
-  max-width: 48rem;
+  max-width: 55rem;
   margin: 0.5rem auto;
 }
 
 .big-news {
   display: grid;
-  gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   margin-bottom: 4rem;
-  margin-top: 1rem;
+  margin-top: 3rem;
   padding: 0 1em;
 }
 
@@ -156,7 +155,7 @@ a {
 }
 .popular-card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   padding-bottom: 2em;
   gap: 0.75rem;
 }
@@ -174,12 +173,21 @@ a {
   display: flex;
   flex-direction: column;
 }
+.card-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
 
-@media (min-width: 768px) and (max-width: 991px) {
-  .header {
+/* tablet */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .nav {
+    display: flex;
+  }
+  .branding {
     display: none;
   }
-  .header-tablet {
+  .branding-tablet {
     display: flex;
   }
   .popular-card-container {
@@ -187,13 +195,13 @@ a {
   }
 }
 
-@media (min-width: 992px) {
+/* desktop */
+@media screen and (min-width: 992px) {
   .nav {
-    display: block;
+    display: flex;
   }
-  .big-news,
-  .popular {
-    max-width: 62.5rem;
+  .branding {
+    margin-right: 5rem;
   }
   .popular-card-container {
     grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
