--- a/code/style.css
+++ b/code/style.css
@@ -230,7 +230,8 @@ li {
     font-size: 14px;
     line-height: 20px; 
     flex-wrap: wrap;
-    margin-left: -50px;
+    max-width: 70%;
+    text-align: center;
   }
 }
 
