--- a/code/style.css
+++ b/code/style.css
@@ -231,7 +231,7 @@ li {
     line-height: 20px; 
     flex-wrap: wrap;
     max-width: 70%;
-    text-align: center;
+    text-align: justify;
   }
 }
 
