--- a/code/style.css
+++ b/code/style.css
@@ -231,8 +231,13 @@ li {
     line-height: 20px; 
     flex-wrap: wrap;
     max-width: 70%;
-    text-align: justify;
+    
   }
+}
+
+.card1 {
+  display: flex;
+  justify-content: center;
 }
 
 /* TABLET */
