--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,378 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
+
+html {
+  background: white;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* START Header with logo, links and date only visible on mobile (max 1024px) */
+header.mobile {
+  height: 4.5rem;
+  border: solid #82171A;
+  border-width: 0.5rem 0;
+  margin-bottom: 1rem;
+  padding: 0 0.5rem;
+}
+
+.mobile-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+}
+
+.logo-mobile {
+  height: 3rem;
+  padding-top: 0.5rem;
+}
+
+.menu-icon {
+  font-size: 2rem;
+  padding-top: 0.5rem;
+  color: #82171A;
+  line-height: 2rem;
+}
+
+.mobile-wrap nav {
+  position: absolute;
+  background-color: #82171A;
+  top: 4.5rem;
+  left: 0;
+  width: 50%;
+  z-index: 1;
+}
+
+.mobile-wrap nav ul {
+  list-style-type: none;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s;
+}
+
+.mobile-wrap nav ul li {
+  padding: 0 0.5rem;
+}
+
+.mobile-wrap nav ul li a {
+  display: inline-block;
+  padding: 0.75rem;
+  color: white;
+  text-decoration: none;
+}
+
+#checkbox {
+  display: none;
+}
+
+#checkbox:checked~nav ul {
+  max-height: 18rem;
+  padding: 1rem 0;
+  transition: all 0.5s;
+}
+
+@media (min-width: 1025px) {
+  header.mobile {
+    display: none;
+  }
+}
+
+/* END Header with logo, links and date only visible on mobile (max 1024px) */
+
+
+/* START Header with logo, links and date only visible on desktop (min 1025px) */
+.navbar, time {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.2rem;
+}
+
+header.desktop img {
+  width: 12rem;
+}
+
+@media (max-width: 1024px) {
+  header.desktop {
+    display: none;
+  }
+}
+
+@media (min-width: 1025px) {
+  header.desktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: solid #82171A;
+    border-width: 1rem 0;
+    margin-bottom: 1rem;
+    padding: 0 6rem;
+  }
+}
+
+/* Different colors when hovering over items of navbar */
+@media (min-width: 1025px) {
+  .desktop .navbar:hover {
+    text-decoration: underline 30%;
+    text-underline-offset: 30%;
+  }
+
+  .desktop .news:hover {
+    text-decoration-color: rgb(255, 165, 0, 0.50);
+  }
+
+  .desktop .law:hover {
+    text-decoration-color: rgb(255, 255, 0, 0.50);
+  }
+
+  .desktop .travel:hover {
+    text-decoration-color: rgb(0, 128, 0, 0.50);
+  }
+
+  .desktop .sports:hover {
+    text-decoration-color: rgb(0, 0, 255, 0.50);
+  }
+
+  .desktop .society:hover {
+    text-decoration-color: rgb(75, 0, 130, 0.50);
+  }
+
+  .desktop .weather:hover {
+    text-decoration-color: rgb(238, 130, 238, 0.50);
+  }
+}
+
+.navbar {
+  color: black;
+}
+
+time {
+  color: #82171A;
+}
+
+/* END Header with logo, links and date only visible on desktop (min 1025px) */
+
+
+/* START Header with ticker always visible */
+
+@-webkit-keyframes ticker {
+  0% {
+    /* -webkit-transform: translate3d(0, 0, 0); */
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    /* -webkit-transform: translate3d(-200%, 0, 0); */
+    transform: translate3d(-200%, 0, 0);
+  }
+}
+
+@keyframes ticker {
+  0% {
+    /* -webkit-transform: translate3d(0, 0, 0); */
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    /* -webkit-transform: translate3d(-200%, 0, 0); */
+    transform: translate3d(-200%, 0, 0);
+  }
+}
+
+.ticker-wrap {
+  /* width: 100%; is it a useful property? need to test */
+  overflow: hidden;
+  height: 3rem;
+  background: linear-gradient(to right, rgba(28, 0, 0, 1), rgba(231, 46, 52, 1));
+  box-sizing: content-box;
+  padding: 0.3rem 0 0 100%;
+}
+
+.ticker-wrap .ticker {
+  display: inline-block;
+  height: 1rem;
+  line-height: 1rem;
+  white-space: nowrap;
+  padding-right: 100%;
+  box-sizing: content-box;
+  /* -webkit-animation-iteration-count: infinite; */
+  animation-iteration-count: infinite;
+  /* -webkit-animation-timing-function: linear; */
+  animation-timing-function: linear;
+  /* -webkit-animation-name: ticker; */
+  animation-name: ticker;
+  /* -webkit-animation-duration: 30s; */
+  animation-duration: 10s;
+}
+
+.ticker-item {
+  display: inline-block;
+  padding: 0 1rem 0.3rem 1rem;
+  font-size: 1rem;
+  color: white;
+}
+
+/* END Header with ticker always visible */
+
+
+main {
+  padding: 0 0.5rem;
+}
+
+@media (min-width:1025px) {
+  main {
+    padding: 0 6rem;
+  }
+}
+
+
+/* START Feature section */
+
+@media (min-width: 1025px) {
+  .feature:hover {
+    background-color: white;
+    opacity: 0.8;
+  }
+}
+
+.feature {
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column-gap: 1.5rem;
+  padding: 1rem 1rem;
+}
+
+@media (min-width: 1025px) {
+  .feature {
+    grid-template-columns: 3fr 2fr;
+    align-items: center;
+  }
+}
+
+.feature-text {
+  color: white;
+}
+
+.feature-headline {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.feature-lead {
+  display: none;
+}
+
+@media (min-width: 1025px) {
+  .feature-headline {
+    font-size: 1.75rem;
+    text-align: center;
+  }
+
+  .feature-lead {
+    display: block;
+    /* Values to transform the overflow in an ellipsis, inspired by CodePen https://codepen.io/martinwolf/pen/qlFdp */
+    display: -webkit-box;
+    max-width: 800px;
+    height: 168px;
+    /* height calculation: font-size*line-height*lines-to-show; */
+    text-align: justify;
+    font-size: 20px;
+    line-height: 1.2;
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+/* END Feature section */
+
+
+/* START News section */
+
+.card-headline {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.news-cards {
+  background-color: rgb(240, 240, 240);
+  color: black;
+}
+
+.news-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  text-align: center;
+  grid-gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.card {
+  display: grid;
+}
+
+.card-picture img {
+  object-fit: cover;
+  width: 100%;
+  height: 15rem;
+  box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.50);
+}
+
+@media (min-width: 1025px) {
+  .news-cards .news:hover {
+    box-shadow: 0.15rem 0.15rem 0.3rem rgb(255, 165, 0, 0.50);
+  }
+
+  .news-cards .law:hover {
+    box-shadow: 0.15rem 0.15rem 0.3rem rgb(255, 255, 0, 0.50);
+  }
+
+  .news-cards .travel:hover {
+    box-shadow: 0.15rem 0.15rem 0.3rem rgb(0, 128, 0, 0.50);
+  }
+
+  .news-cards .sports:hover {
+    box-shadow: 0.15rem 0.15rem 0.3rem rgb(0, 0, 255, 0.50);
+  }
+
+  .news-cards .society:hover {
+    box-shadow: 0.15rem 0.15rem 0.3rem rgb(75, 0, 130, 0.50);
+  }
+
+  .news-cards .weather:hover {
+    box-shadow: 0.15rem 0.15rem 0.3rem rgb(238, 130, 238, 0.50);
+  }
+}
+
+/* END News section */
+
+
+/* START Footer */
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #82171A;
+  color: white;
+  padding: 0.5rem 1rem 1rem 1rem;
+  font-size: 0.75rem;
+  font-family: 'Raleway', sans-serif;
+}
+
+.copyright, .follow {
+  display: flex;
+  align-items: flex-end;
+  column-gap: 0.5rem;
+}
+
+/* END Footer */
