--- a/code/style.css
+++ b/code/style.css
@@ -14,60 +14,67 @@ min-width: 900px;
   display:flex;
   flex-direction: row;
   width:100%;
-  height:100px;
-  
+ 
   margin: 0 auto;
  padding: 0, 30px;
   
 }
 
-.nav-bar{
+.nav-bar {
   
   background-color: rgb(0, 0, 0);
-  padding: 10px;
-  height:100px;
-  line-height: 1rem;
+ 
+ 
+
   display: flex;
   width:100%;
 }
+
 .nav-bar img{
-  height: 80px;
-  width:80px;
+  margin: 20px 10px;
+  height: 100px;
+  width:100px;
   opacity: 70%;
   
 }
-
+.navbar {
+  background-color: rgb(0, 0, 0);
+}
 
 .nav-bar h1{
   color: antiquewhite;
  font-size: 20px;
  font-family: 'The Nautigal';
-height: 50px;
  margin: 30px 10px;
+
 opacity: 80%;
  
   
 }
 
 .media-icons{
-  background-color: black;
+ 
   color:rgba(250, 235, 215, 0.438);
   width: 100%;
-  padding: 0 5px;
-  letter-spacing: 3px;
-  
+ margin-left: 20px;
+ text-align: end;
+ display: inline-block;
+  padding: 10px;
+  font-size: medium;
+  letter-spacing: 1px;
 }
 
 .navbar-nav li a {
   
-  font-size: 17px;
+  font-size: 11px;
   cursor: pointer;
   text-decoration: none;
   font-weight: bold;
   font-family: 'The Nautigal', cursive;
-  margin: 20px 10px;
-  letter-spacing: 2px ;
- display: none;
+  background-color: black;
+ display: inline-block;
+ color: rgba(250, 235, 215, 0.438);
+ 
  }
 
 
@@ -75,41 +82,38 @@ opacity: 80%;
   display:none;
   height:80px;
 }
-
+/*Using media queries to make navbar repsonsive  */
 @media  screen and (min-width:768px){
   header{
-    
+    width:100%;
     background-color: black;
     display:flex;
     flex-direction: column;
-    width:100%;
-  }
-  
-  
-  .nav-bar{
-    background-color: black;
-    height:50px;  
     flex-wrap: wrap;
+   max-height: 300px;
   }
-  
+  .navbar-nav li a {
+    color:rgba(250, 235, 215, 0.842);
+    font-size: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'The Nautigal', cursive;
+    letter-spacing: 1px ;
+    display: inline-block;
+    padding: 40px 0 0 0;
+    margin-top: 40px;
+    flex: 4;
+  }
   .nav-bar img{
-    height: 110px;
-    width:100px;
+    margin: 10px;
+    height: 90px;
+    width:70px;
     opacity: 60%;
     padding-bottom: 20px;
   }
   
-  .media-icons{
-    margin: 0 10px;
-    text-align: right;
-    letter-spacing: 4px;
-    flex-grow: 1;
-    flex-wrap: wrap;
-   cursor: pointer;
-   font-size: 20px;
-   color: rgba(250, 235, 215, 0.705);
   
-  }
   .fa-facebook-f:hover{
     opacity: 40%;
     transform: scale(1.7);
@@ -129,12 +133,12 @@ opacity: 80%;
   }
   .nav-bar h1{
    
-    padding: 0 10px;
-    letter-spacing: 1px;
+  padding-top: 20px;
+  margin: 10px;
+  letter-spacing: 1px;
   font-family: "The Nautigal";
-  font-size: 40px;
+  font-size: 30px;
   justify-content: space-around;
-
   font-weight: bold;
   }
   
@@ -148,18 +152,9 @@ opacity: 80%;
      transform: scale(1.2);
     }
   
-   .navbar-nav li a {
-    color:rgba(250, 235, 215, 0.842);
-    font-size: 14px;
-    cursor: pointer;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'The Nautigal', cursive;
-    letter-spacing: 1px ;
-    display: block;
-    padding: 50px 0 0 0;
-  
-  }
+    
+    
+    }
   
    
    
@@ -180,7 +175,9 @@ opacity: 80%;
     padding: 10px;
     
   }
-   
+  .nav-bar{
+    height: 80px;
+  }
   .highlights2{
     font-weight: light;
     font-size: 20px;
@@ -188,7 +185,7 @@ opacity: 80%;
     padding: 10px;
     font-style: italic;
   }  
-}
+
 
 .main-news .container1{
   display: flex; 
@@ -223,10 +220,6 @@ h3{
   font-weight: bolder;
   
 }
-
-
-
-
 
   .featured-text{
     font-style: italic;
