--- a/code/style.css
+++ b/code/style.css
@@ -217,6 +217,14 @@ header {
   flex-wrap: wrap;
 }
 
+}
+.child1{
+  width: 720px;
+}
+.child2{
+  width: 400px;
+} */     
+     
 .image1{ 
  width: 80%;
  }
