--- a/code/style.css
+++ b/code/style.css
@@ -217,14 +217,13 @@ header {
   flex-wrap: wrap;
 }
 
-/* 
 }
 .child1{
-  width: 720px;
+  /* width: 720px; */
 }
 .child2{
-  width: 400px;
-} */     
+  /* width: 400px; */
+}   
      
 .image1{ 
  width: 80%;
